# crewai-projects

./: .pre-commit-config.yaml  pyproject.toml  readme.md
automated_project/: README.md  main.py  requirements.txt
automated_project/app/: agents.py  crew.py  models.py  tasks.py
automated_project/config/: agents.yaml
automated_project/data/: input.py
automated_project/notebook/: L_1.ipynb
automated_project/utils/: config.py  utils.py
crew_boiler_plate/: README.md  pyproject.toml
crew_boiler_plate/src/crew_boiler_plate/: crew.py  main.py
crew_boiler_plate/src/crew_boiler_plate/tools/: custom_tool.py
deploy_project/: README.md  report.md
deploy_project/src/deploy_project/: crew.py  main.py
flow_boiler_plate/: README.md  pyproject.toml
flow_boiler_plate/src/flow_boiler_plate/: main.py
flow_boiler_plate/src/flow_boiler_plate/crews/poem_crew/: poem_crew.py
flow_boiler_plate/src/flow_boiler_plate/tools/: custom_tool.py
