[project]
name = "deploy_project"
version = "0.1.0"
description = "deploy_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
deploy_project = "deploy_project.main:run"
run_crew = "deploy_project.main:run"
train = "deploy_project.main:train"
replay = "deploy_project.main:replay"
test = "deploy_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
