[project]
name = "crew_boiler_plate"
version = "0.1.0"
description = "crew_boiler_plate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
crew_boiler_plate = "crew_boiler_plate.main:run"
run_crew = "crew_boiler_plate.main:run"
train = "crew_boiler_plate.main:train"
replay = "crew_boiler_plate.main:replay"
test = "crew_boiler_plate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
