[project]
name = "flow_boiler_plate"
version = "0.1.0"
description = "flow_boiler_plate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
]

[project.scripts]
kickoff = "flow_boiler_plate.main:kickoff"
run_crew = "flow_boiler_plate.main:kickoff"
plot = "flow_boiler_plate.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
